--- a/panelist.html
+++ b/panelist.html
@@ -87,6 +87,6 @@
 	
 	<script src="src/js/jquery.min.js"></script>
     <script src="src/js/jquery.cropit.js"></script>
-	<script src="src/js/maina.js"></script>
+	<script src="src/js/mainp.js"></script>
 </body>
 </html>
