--- a/index.html
+++ b/index.html
@@ -87,6 +87,6 @@
 	
 	<script src="src/js/jquery.min.js"></script>
     <script src="src/js/jquery.cropit.js"></script>
-	<script src="src/js/maina.js"></script>
+	<script src="src/js/main.js"></script>
 </body>
 </html>
