--- a/index2.html
+++ b/index2.html
@@ -17,13 +17,14 @@
 <body>
 
     <header>
-        <h1>DP Generator</h1>
+        <h1>Suicide Free pledge</h1>
     </header>
 
     <main>
 
         <section class="under">
             <div>
+                <img src="src/img/logo.jpeg" width="200px">
                 <p class="">Upload photo to create your DP</p>
                 <p class="step">To generate your personalized DP</p>
             </div>
@@ -33,7 +34,7 @@
                 <li class="ti">Click on Create your own DP</li>
                 <li class="ti">Dont forget to share on
                     <span class="ti-twitter" style="color: #03A9F4;"><a href="http://twitter.com/ecx_unilag">twitter</a></span>,
-                    <span class="ti-instagram" style="color: #00BCD4;"><a href="http://instagram/com/ecx_unilag">instagram</a></span>, and make sure you hashtag (#DP)</li>
+                    <span class="ti-instagram" style="color: #00BCD4;"><a href="http://instagram/com/ecx_unilag">instagram</a></span>, and make sure you use the hashtag (#notosuicide #mentalcarefoumdation)</li>
             </ul>
         </section>
 
