Updated 1st one

--- a/index2.html
+++ b/index2.html
@@ -33,8 +33,8 @@
                 <li class="ti">Upload your picture (for best experience, crop the picture to square)</li>
                 <li class="ti">Click on Create your own DP</li>
                 <li class="ti">Dont forget to share on
-                    <span class="ti-twitter" style="color: #03A9F4;"><a href="http://twitter.com/ecx_unilag">twitter</a></span>,
-                    <span class="ti-instagram" style="color: #00BCD4;"><a href="http://instagram/com/ecx_unilag">instagram</a></span>, and make sure you use the hashtag (#notosuicide #mentalcarefoumdation)</li>
+                    <span class="ti-twitter" style="color: #03A9F4;"><a href="http://twitter.com/mcarefoundation">twitter</a></span>,
+                    <span class="ti-instagram" style="color: #00BCD4;"><a href="http://instagram/com/mentalcarefoundation">instagram</a></span>, and make sure you use the hashtag (#notosuicide #mentalcarefoumdation)</li>
             </ul>
         </section>
 
