--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
         <section class="under">
             <div>
+                <img src="src/img/logo.jpeg" width="200px">
                 <p class="">Upload photo to create your DP</p>
                 <p class="step">To generate your personalized DP</p>
             </div>
@@ -33,8 +34,8 @@
                 <li class="ti">Upload your picture (for best experience, crop the picture to square)</li>
                 <li class="ti">Click on Create your own DP</li>
                 <li class="ti">Dont forget to share on
-                    <span class="ti-twitter" style="color: #03A9F4;"><a href="http://twitter.com/ecx_unilag">twitter</a></span>,
-                    <span class="ti-instagram" style="color: #00BCD4;"><a href="http://instagram/com/ecx_unilag">instagram</a></span>, and make sure you hashtag (#DP)</li>
+                    <span class="ti-twitter" style="color: #03A9F4;"><a href="http://twitter.com/mcarefoundation">twitter</a></span>,
+                    <span class="ti-instagram" style="color: #00BCD4;"><a href="http://instagram/com/mentalcarefoundation">instagram</a></span>, and make sure you hashtag (#DP)</li>
             </ul>
         </section>
 
