--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <header>
-        <h1>DP Generator</h1>
+        <h1>Mentally Strong Pledge</h1>
     </header>
 
     <main>
@@ -35,7 +35,7 @@
                 <li class="ti">Click on Create your own DP</li>
                 <li class="ti">Dont forget to share on
                     <span class="ti-twitter" style="color: #03A9F4;"><a href="http://twitter.com/mcarefoundation">twitter</a></span>,
-                    <span class="ti-instagram" style="color: #00BCD4;"><a href="http://instagram/com/mentalcarefoundation">instagram</a></span>, and make sure you hashtag (#DP)</li>
+                    <span class="ti-instagram" style="color: #00BCD4;"><a href="http://instagram/com/mentalcarefoundation">instagram</a></span>, and make sure you use the hashtag #mentallyhealthy #mentalcarefoundation</li>
             </ul>
         </section>
 
