--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </main>
 
     <footer>
-        <p> &copy; DP 2019. All Rights Reserved. Follow on
+        <p> &copy; Mental Care Foundation 2020. All Rights Reserved. Follow on
             <a href="https://github.com/geektutor/dp" class="social">Github</p>
 	</footer>
 	
